@@ -36,7 +36,13 @@
    As an optional fourth parameter, you can supply a
    minimum age in seconds the cache file must be before it will
    get cleared.
-  </para></listitem>
+   </para>
+   <note>
+    <para>
+     Since Smarty version 3.1.14 it is possible to delete cache files by their individual expiration time at creation by passing constant SMARTY::CLEAR_EXPIRED as fourth parameter.
+    </para>
+   </note>
+   </listitem>
   </itemizedlist>
 
   <example>
